# function-store-mcp

./: .env  .env.example  .gitignore  Dockerfile  FunctionStore.bat  FunctionStore.spec  LICENSE  README.md  dev.bat  main.py  pyproject.toml  register_mcp.py  seed_functions.py  setup.bat
.github/workflows/: cd.yml  ci.yml  release.yml
backend/: main.py
backend/mcp_core/: auth.py  server.py
backend/mcp_core/api/: api.py
backend/mcp_core/core/: config.py  database.py  mcp_manager.py  security.py
backend/mcp_core/engine/: dependency_solver.py  embedding.py  llm_generator.py  logic.py  package_generator.py  popular_query_cache.py  quality_gate.py  router.py  sanitizer.py  security_audit.py  sync_engine.py  triage.py  worker.py
backend/mcp_core/infra/: background_server.py  coordinator.py  ipc_manager.py
backend/mcp_core/runtime/: environment.py  runtime.py
backend/mcp_core/server/: background_server.py  coordinator.py
cicd/: deploy_manager.py  local_ci.ps1
dev/: build_exe.py  clear_db.py  create_dist.py  debug_duckdb.py  draft_function_1.py  inspect_db.py  inspect_db_v2.py  inspect_embeddings.py  inspect_embeddings.txt  inspect_output.txt  inspect_output_v2.txt  runner_test.py  verify_exe.py  verify_fspm.py  verify_hybrid.py  verify_hybrid_refactor.py
dev_tools/: build_exe.py  check_db.py  dev.py  force_save.py  list_db.py  verify_invisible_master.py  verify_ipc.py  verify_save_draft.py  verify_security.py  verify_smart_get.py  verify_venv.py
dev_tools/test_smart_get/local_pkg/: __init__.py  json_validator.py
dev_tools/tests/: conftest.py
dev_tools/tests/e2e/: test_full_lifecycle.py  (+1 more)
devops/: local_ci.ps1
docker/: ai-ml.Dockerfile  data-science.Dockerfile  minimal.Dockerfile
docs/: ADR_DATABASE_ACCESS_POLICY.md  DESIGN_DOC.md  MONETIZATION_ROADMAP.md  UI_DESIGN.md  VALUE_PROPOSITION.md  landing.html  システム詳細設計書.md
docs/Idea_Note/: 2月20日_メモ書き.md  query_cacheで検索速度の底上げ.md
frontend/: client.py  dashboard.py
frontend/components/: details_dialog.py  function_card.py
frontend/views/: functions_view.py  home_view.py  public_store_view.py  settings_view.py
mcp_core/: __init__.py  api.py  auth.py  config.py  database.py  embedding.py  environment.py  logic.py  quality_gate.py  runtime.py  sanitizer.py  security.py  server.py  supabase_client.py  sync_engine.py  translation.py  workers.py
scripts/: client_save.py  configure_claude.py  debug_db.py  install_torch.py  launcher.py  manage_keys.py  save_agent_logic.py  save_ayato_logic.py  setup_gpu.ps1  translator.py  verify_setup.py
scripts/windows/: function_store_server.spec  setup_windows.bat  start_api.bat  start_hidden.vbs  start_server.bat
solo_mcp/: __init__.py  api.py  auth.py  config.py  database.py  embedding.py  environment.py  logic.py  quality_gate.py  runtime.py  runtime_docker.py  server.py  translation.py  workers.py
tests/: conftest.py  manual_verify_versioning.py  test_api.py  test_auth.py  test_auto_heal.py  test_docker_runtime.py  test_integration.py  test_quality_gate.py  test_sanitizer.py  test_sync_agent.py  test_translation.py  test_versioning.py
(+9 files in other folders)
