[project]
name = "mcp-core"
version = "0.1.0"
description = "Python Function Vector Store MCP Server (Core Edition)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "numpy",
    "duckdb",
    "google-genai", # Lightweight Embeddings
    "psutil", # For process management
    "tqdm>=4.66.0", # Fix for TMonitor import error
    "pyinstaller>=6.3.0",
    "pyinstaller>=6.3.0",
    "flet>=0.21.0",
    "keyring", # For secure storage of API keys
    "ruff>=0.1.0", # Quality Gate: Linter
    "mypy>=1.6.0", # Quality Gate: Type Checker
    "pytest>=8.0.0", # Testing
    "supabase>=2.28.0",
]

[project.scripts]
mcp-core = "mcp_core.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_core"]
