[project]
name = "mcp-core"
version = "0.1.0"
description = "Python Function Vector Store MCP Server (Core Edition)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "numpy",
    "duckdb",
    "google-genai", # Lightweight Embeddings
    "psutil", # For process management
    "tqdm>=4.66.0", # Fix for TMonitor import error
    "pyinstaller>=6.3.0",
    "flet>=0.21.0",
    "flet-charts>=0.80.5",
    "keyring", # For secure storage of API keys
    "ruff>=0.1.0", # Quality Gate: Linter & Formatter
    "pytest>=8.0.0", # Testing
    "python-dotenv>=1.0.0",
    "fastapi",
    "httpx",
    "pytest-asyncio",
]

[project.scripts]
mcp-core = "mcp_core.server:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["W292", "E501", "W291", "W293"]

[tool.pytest.ini_options]
testpaths = ["dev_tools/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
addopts = "--basetemp=dev_tools/tests/test_data"